--- a/Session2-VK.ipynb
+++ b/Session2-VK.ipynb
@@ -41,7 +41,11 @@
       "metadata": {
         "id": "kGWv5hBhv2jf",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ecf0007d-2537-4831-9c8a-131388ca912d"
       },
       "source": [
         "#Import necessary libraries and Installing packages\n",
@@ -49,15 +53,27 @@
         "!pip install -q keras\n",
         "import keras"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wnMlDJQKv4VG",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "19a66e3b-6184-4aba-861c-b083a8f078b0"
       },
       "source": [
         "#Importing necessary libraries and packages from Keras\n",
@@ -71,19 +87,27 @@
         "\n",
         "from keras.datasets import mnist"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8CdSu2lMwB9s",
         "colab_type": "code",
+        "outputId": "8a3b5f08-89f5-46e3-ba0d-f91714a0ba42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "ba6cf666-0919-47bf-afc7-e9052740050b"
+        }
       },
       "source": [
         "#Loading the dataset\n",
@@ -91,7 +115,7 @@
         "#tuple represents the testing x-y pairs.\n",
         "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,11 +132,11 @@
       "metadata": {
         "id": "tLaDf0-rwCmj",
         "colab_type": "code",
+        "outputId": "50a92b62-1d68-415d-9095-eb8dde0d97d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        },
-        "outputId": "7c674861-1b00-482e-ee9a-bcad00b91ae0"
+        }
       },
       "source": [
         "#Printing the Mnist image with shape (It is a tuple of integers that describe how many dimensions the tensor has\n",
@@ -124,7 +148,7 @@
         "%matplotlib inline\n",
         "plt.imshow(X_train[0])"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,13 +161,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f93ad5850b8>"
+              "<matplotlib.image.AxesImage at 0x7fce7e3f80f0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -202,17 +226,17 @@
       "metadata": {
         "id": "JNKLOmhlwJQl",
         "colab_type": "code",
+        "outputId": "9576a1ea-afaa-4a56-fb77-5f86f9d8ff0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dc1f83a0-ce8a-440c-83da-8901595d26e9"
+        }
       },
       "source": [
         "#To see the effect of the transformation we can see the values before and after applying to_categorical:-\n",
         "y_train[:10]"
       ],
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -252,18 +276,18 @@
       "metadata": {
         "id": "upxc99AswMW0",
         "colab_type": "code",
+        "outputId": "b7dcc858-7dc3-4f83-c0f6-bbd82968a7f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "4bd31edf-bd4b-46ac-a8e0-45b54d6f46aa"
+        }
       },
       "source": [
         "#Now we will do data ready to be used in our simple model example that we are going to program in Keras in the \n",
         "#next section.\n",
         "Y_train[:10]\n"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +308,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -293,11 +317,11 @@
       "metadata": {
         "id": "irTVUE47wNwr",
         "colab_type": "code",
+        "outputId": "69373f45-564c-4af3-af03-65f14e7cb1f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 819
-        },
-        "outputId": "8c92f2f7-3c03-4c3d-c31e-66f8bf1b7540"
+        }
       },
       "source": [
         "#Defining the Model\n",
@@ -319,7 +343,7 @@
         "model.add(Convolution2D(512, 3, 3, activation='relu'))\n",
         "model.add(Convolution2D(1024, 3, 3, activation='relu'))\n",
         "model.add(Convolution2D(2048, 3, 3, activation='relu'))\n",
-        "model.add(Convolution2D(10, 3, 3, activation='relu'))\n",
+        "model.add(Convolution2D(10, 3, 3))\n",
         "\n",
         "model.add(Flatten())\n",
         "model.add(Activation('softmax'))\n",
@@ -327,40 +351,14 @@
         "#A very useful method that Keras provides to check the architecture of our model is summary()\n",
         "model.summary()"
       ],
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:8: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (3, 3), activation=\"relu\", input_shape=(28, 28, 1...)`\n",
-            "  \n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:9: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\")`\n",
-            "  if __name__ == '__main__':\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(128, (3, 3), activation=\"relu\")`\n",
-            "  # Remove the CWD from sys.path while we load stuff.\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(256, (3, 3), activation=\"relu\")`\n",
-            "  \n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:15: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(512, (3, 3), activation=\"relu\")`\n",
-            "  from ipykernel import kernelapp as app\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:16: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(1024, (3, 3), activation=\"relu\")`\n",
-            "  app.launch_new_instance()\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:17: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(2048, (3, 3), activation=\"relu\")`\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:18: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(10, (3, 3), activation=\"relu\")`\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            "Colocations handled automatically by placer.\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
@@ -392,6 +390,26 @@
             "_________________________________________________________________\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:8: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (3, 3), activation=\"relu\", input_shape=(28, 28, 1...)`\n",
+            "  \n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:9: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\")`\n",
+            "  if __name__ == '__main__':\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(128, (3, 3), activation=\"relu\")`\n",
+            "  # Remove the CWD from sys.path while we load stuff.\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(256, (3, 3), activation=\"relu\")`\n",
+            "  \n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:15: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(512, (3, 3), activation=\"relu\")`\n",
+            "  from ipykernel import kernelapp as app\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:16: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(1024, (3, 3), activation=\"relu\")`\n",
+            "  app.launch_new_instance()\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:17: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(2048, (3, 3), activation=\"relu\")`\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:18: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(10, (3, 3))`\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
@@ -417,17 +435,17 @@
       "metadata": {
         "id": "5O248wVQyMft",
         "colab_type": "code",
+        "outputId": "ec71c357-0b47-4711-9744-1e926220cc8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 479
-        },
-        "outputId": "c4de2b5f-b19c-432a-a018-888090262ebe"
+        }
       },
       "source": [
         "#Model training\n",
         "model.fit(X_train, Y_train, batch_size=32, nb_epoch=10, verbose=1)"
       ],
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,25 +468,25 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "60000/60000 [==============================] - 118s 2ms/step - loss: 2.3030 - acc: 0.0986\n",
+            "60000/60000 [==============================] - 119s 2ms/step - loss: 0.1527 - acc: 0.9522\n",
             "Epoch 2/10\n",
-            "60000/60000 [==============================] - 112s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 112s 2ms/step - loss: 0.0566 - acc: 0.9833\n",
             "Epoch 3/10\n",
-            "60000/60000 [==============================] - 113s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 112s 2ms/step - loss: 0.0393 - acc: 0.9887\n",
             "Epoch 4/10\n",
-            "60000/60000 [==============================] - 112s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 112s 2ms/step - loss: 0.0347 - acc: 0.9900\n",
             "Epoch 5/10\n",
-            "60000/60000 [==============================] - 112s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 112s 2ms/step - loss: 0.0284 - acc: 0.9919\n",
             "Epoch 6/10\n",
-            "60000/60000 [==============================] - 112s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 0.0273 - acc: 0.9926\n",
             "Epoch 7/10\n",
-            "60000/60000 [==============================] - 112s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 0.0229 - acc: 0.9937\n",
             "Epoch 8/10\n",
-            "60000/60000 [==============================] - 112s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 0.0204 - acc: 0.9942\n",
             "Epoch 9/10\n",
-            "60000/60000 [==============================] - 113s 2ms/step - loss: 2.3026 - acc: 0.0987\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 0.0187 - acc: 0.9946\n",
             "Epoch 10/10\n",
-            "60000/60000 [==============================] - 113s 2ms/step - loss: 2.3026 - acc: 0.0987\n"
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 0.0190 - acc: 0.9944\n"
           ],
           "name": "stdout"
         },
@@ -476,13 +494,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f93aa4001d0>"
+              "<keras.callbacks.History at 0x7fcec760eef0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 11
         }
       ]
     },
@@ -505,21 +523,21 @@
       "metadata": {
         "id": "CfJiXOKsyj4y",
         "colab_type": "code",
+        "outputId": "88038451-4dc3-449c-8da9-434d7730ce6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2bf43e78-0874-4678-f16c-fc78366e0eb9"
+        }
       },
       "source": [
         "print(score)"
       ],
-      "execution_count": 20,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[2.3025851249694824, 0.098]\n"
+            "[0.043470209123720994, 0.9905]\n"
           ],
           "name": "stdout"
         }
@@ -543,30 +561,48 @@
       "metadata": {
         "id": "WWKKoOKwyppN",
         "colab_type": "code",
+        "outputId": "522eddac-7a96-4f5f-8aa1-9fe1d8f7a88d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "cc307ea8-7852-476e-a5eb-51f9c45e118e"
+          "height": 493
+        }
       },
       "source": [
         "print(y_pred[:9])\n",
         "print(y_test[:9])"
       ],
-      "execution_count": 22,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-            " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]]\n",
+            "[[9.62709503e-19 3.62527825e-12 8.26049576e-11 9.18473739e-14\n",
+            "  2.07532932e-11 8.38014640e-16 2.69499952e-22 1.00000000e+00\n",
+            "  1.38203014e-14 3.85869967e-15]\n",
+            " [3.78015220e-17 1.55144717e-11 1.00000000e+00 3.23857781e-12\n",
+            "  2.05581434e-16 1.96645846e-17 5.30740037e-14 1.06623141e-12\n",
+            "  6.13393581e-12 1.74935452e-21]\n",
+            " [3.24213079e-09 9.99998212e-01 1.02915871e-08 1.87005234e-09\n",
+            "  6.46043006e-08 2.44479388e-08 6.09044193e-08 3.38143536e-07\n",
+            "  1.26172029e-06 3.48423290e-10]\n",
+            " [1.00000000e+00 1.42629350e-16 4.51104079e-13 2.33329198e-12\n",
+            "  2.73762973e-13 9.70314037e-11 1.80536669e-10 1.53055242e-11\n",
+            "  3.30800057e-12 3.02869539e-14]\n",
+            " [1.64742708e-09 2.52138705e-07 1.05565123e-09 2.77250614e-08\n",
+            "  9.68009651e-01 2.48962692e-07 5.26612105e-08 3.78797358e-06\n",
+            "  3.29318169e-07 3.19857076e-02]\n",
+            " [1.62739633e-09 9.99965429e-01 5.77093324e-08 1.54322588e-09\n",
+            "  1.03431276e-07 4.23416964e-08 7.18331306e-09 2.28287518e-05\n",
+            "  1.15127286e-05 9.07896975e-08]\n",
+            " [1.16793138e-15 1.20465356e-12 2.33579079e-13 1.90970785e-12\n",
+            "  9.99998927e-01 2.10753429e-11 5.50903135e-16 1.00034243e-11\n",
+            "  1.98217194e-08 1.02013325e-06]\n",
+            " [1.58575008e-19 7.32428800e-22 1.17897019e-17 5.30301969e-10\n",
+            "  1.61008734e-10 4.00538665e-11 3.42339941e-20 4.37947416e-15\n",
+            "  2.28163978e-14 1.00000000e+00]\n",
+            " [4.02465977e-10 4.18773354e-16 1.78009408e-12 2.05324091e-09\n",
+            "  1.65649178e-12 9.90362048e-01 9.63786896e-03 1.77681302e-13\n",
+            "  1.70176806e-09 1.63584559e-07]]\n",
             "[7 2 1 0 4 1 4 9 5]\n"
           ],
           "name": "stdout"
