--- a/Assignment_3_1st_DNN-VK.ipynb
+++ b/Assignment_3_1st_DNN-VK.ipynb
@@ -421,19 +421,27 @@
       "metadata": {
         "id": "4xWoKhPY9Of5",
         "colab_type": "code",
-        "outputId": "0252de93-42e2-4cd4-9716-c30fc5e0b2af",
+        "outputId": "e4dc2544-ac00-4767-aa45-d3757bbf2a90",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1088
+          "height": 768
         }
       },
       "source": [
         "#Model training\n",
         "\n",
-        "model.fit(X_train, Y_train, batch_size=32, nb_epoch=30, verbose=1)"
+        "model.fit(X_train, Y_train, batch_size=32, nb_epoch=20, verbose=1)"
       ],
-      "execution_count": 49,
+      "execution_count": 57,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "  768/60000 [..............................] - ETA: 13s - loss: 0.0097 - acc: 0.9974"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -445,66 +453,45 @@
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/30\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.3479 - acc: 0.9478\n",
-            "Epoch 2/30\n",
-            "60000/60000 [==============================] - 12s 204us/step - loss: 0.1393 - acc: 0.9742\n",
-            "Epoch 3/30\n",
-            "60000/60000 [==============================] - 12s 200us/step - loss: 0.0964 - acc: 0.9801\n",
-            "Epoch 4/30\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0728 - acc: 0.9842\n",
-            "Epoch 5/30\n",
-            "60000/60000 [==============================] - 12s 196us/step - loss: 0.0607 - acc: 0.9858\n",
-            "Epoch 6/30\n",
-            "60000/60000 [==============================] - 12s 198us/step - loss: 0.0524 - acc: 0.9871\n",
-            "Epoch 7/30\n",
-            "60000/60000 [==============================] - 13s 212us/step - loss: 0.0453 - acc: 0.9892\n",
-            "Epoch 8/30\n",
-            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0371 - acc: 0.9913\n",
-            "Epoch 9/30\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0350 - acc: 0.9913\n",
-            "Epoch 10/30\n",
-            "60000/60000 [==============================] - 12s 196us/step - loss: 0.0328 - acc: 0.9917\n",
-            "Epoch 11/30\n",
-            "60000/60000 [==============================] - 12s 197us/step - loss: 0.0299 - acc: 0.9923\n",
-            "Epoch 12/30\n",
-            "60000/60000 [==============================] - 12s 193us/step - loss: 0.0257 - acc: 0.9935\n",
-            "Epoch 13/30\n",
-            "60000/60000 [==============================] - 12s 193us/step - loss: 0.0244 - acc: 0.9940\n",
-            "Epoch 14/30\n",
-            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0218 - acc: 0.9944\n",
-            "Epoch 15/30\n",
-            "60000/60000 [==============================] - 12s 196us/step - loss: 0.0204 - acc: 0.9951\n",
-            "Epoch 16/30\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0196 - acc: 0.9948\n",
-            "Epoch 17/30\n",
-            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0188 - acc: 0.9952\n",
-            "Epoch 18/30\n",
-            "60000/60000 [==============================] - 12s 192us/step - loss: 0.0175 - acc: 0.9956\n",
-            "Epoch 19/30\n",
-            "60000/60000 [==============================] - 11s 192us/step - loss: 0.0165 - acc: 0.9959\n",
-            "Epoch 20/30\n",
-            "60000/60000 [==============================] - 11s 191us/step - loss: 0.0149 - acc: 0.9963\n",
-            "Epoch 21/30\n",
-            "60000/60000 [==============================] - 11s 191us/step - loss: 0.0154 - acc: 0.9960\n",
-            "Epoch 22/30\n",
-            "60000/60000 [==============================] - 12s 194us/step - loss: 0.0143 - acc: 0.9963\n",
-            "Epoch 23/30\n",
-            "60000/60000 [==============================] - 12s 205us/step - loss: 0.0136 - acc: 0.9965\n",
-            "Epoch 24/30\n",
-            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0131 - acc: 0.9965\n",
-            "Epoch 25/30\n",
-            "60000/60000 [==============================] - 11s 190us/step - loss: 0.0130 - acc: 0.9965\n",
-            "Epoch 26/30\n",
-            "60000/60000 [==============================] - 12s 199us/step - loss: 0.0110 - acc: 0.9970\n",
-            "Epoch 27/30\n",
-            "60000/60000 [==============================] - 12s 197us/step - loss: 0.0111 - acc: 0.9973\n",
-            "Epoch 28/30\n",
-            "60000/60000 [==============================] - 12s 201us/step - loss: 0.0114 - acc: 0.9972\n",
-            "Epoch 29/30\n",
-            "60000/60000 [==============================] - 12s 206us/step - loss: 0.0098 - acc: 0.9977\n",
-            "Epoch 30/30\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0115 - acc: 0.9970\n"
+            "60000/60000 [==============================] - 13s 210us/step - loss: 0.0097 - acc: 0.9976\n",
+            "Epoch 2/20\n",
+            "60000/60000 [==============================] - 12s 206us/step - loss: 0.0099 - acc: 0.9975\n",
+            "Epoch 3/20\n",
+            "60000/60000 [==============================] - 12s 197us/step - loss: 0.0082 - acc: 0.9981\n",
+            "Epoch 4/20\n",
+            "60000/60000 [==============================] - 12s 197us/step - loss: 0.0083 - acc: 0.9978\n",
+            "Epoch 5/20\n",
+            "60000/60000 [==============================] - 12s 197us/step - loss: 0.0090 - acc: 0.9977\n",
+            "Epoch 6/20\n",
+            "60000/60000 [==============================] - 12s 206us/step - loss: 0.0086 - acc: 0.9976\n",
+            "Epoch 7/20\n",
+            "60000/60000 [==============================] - 12s 202us/step - loss: 0.0080 - acc: 0.9981\n",
+            "Epoch 8/20\n",
+            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0077 - acc: 0.9980\n",
+            "Epoch 9/20\n",
+            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0079 - acc: 0.9980\n",
+            "Epoch 10/20\n",
+            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0076 - acc: 0.9979\n",
+            "Epoch 11/20\n",
+            "60000/60000 [==============================] - 12s 193us/step - loss: 0.0077 - acc: 0.9981\n",
+            "Epoch 12/20\n",
+            "60000/60000 [==============================] - 12s 196us/step - loss: 0.0068 - acc: 0.9984\n",
+            "Epoch 13/20\n",
+            "60000/60000 [==============================] - 12s 204us/step - loss: 0.0075 - acc: 0.9981\n",
+            "Epoch 14/20\n",
+            "60000/60000 [==============================] - 12s 200us/step - loss: 0.0062 - acc: 0.9987\n",
+            "Epoch 15/20\n",
+            "60000/60000 [==============================] - 12s 194us/step - loss: 0.0064 - acc: 0.9983\n",
+            "Epoch 16/20\n",
+            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0065 - acc: 0.9982\n",
+            "Epoch 17/20\n",
+            "60000/60000 [==============================] - 12s 193us/step - loss: 0.0060 - acc: 0.9983\n",
+            "Epoch 18/20\n",
+            "60000/60000 [==============================] - 12s 195us/step - loss: 0.0060 - acc: 0.9985\n",
+            "Epoch 19/20\n",
+            "60000/60000 [==============================] - 12s 198us/step - loss: 0.0057 - acc: 0.9988\n",
+            "Epoch 20/20\n",
+            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0063 - acc: 0.9984\n"
           ],
           "name": "stdout"
         },
@@ -512,13 +499,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f50a7cc8860>"
+              "<keras.callbacks.History at 0x7f50a7c3be48>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 57
         }
       ]
     },
@@ -542,7 +529,7 @@
       "metadata": {
         "id": "mkX8JMv79q9r",
         "colab_type": "code",
-        "outputId": "a826e9fe-cebc-405e-c0cc-7f10fddc1116",
+        "outputId": "e230d5fa-d437-479a-a20b-3eec26712a8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -551,12 +538,12 @@
       "source": [
         "print(score)"
       ],
-      "execution_count": 52,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.03112751807420864, 0.9914]\n"
+            "[0.026186606326923358, 0.9918]\n"
           ],
           "name": "stdout"
         }
@@ -580,48 +567,39 @@
       "metadata": {
         "id": "Ym7iCFBm9uBs",
         "colab_type": "code",
-        "outputId": "c549379f-d612-4293-da02-8277412b0dc1",
+        "outputId": "31dca43d-7df3-4076-fafb-153404fb3c78",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 493
+          "height": 340
         }
       },
       "source": [
         "print(y_pred[:9])\n",
         "print(y_test[:9])"
       ],
-      "execution_count": 54,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[1.91564095e-06 1.79291783e-06 2.45187852e-08 1.45696134e-07\n",
-            "  2.51138459e-07 2.43541763e-07 6.88165017e-07 9.99994636e-01\n",
-            "  2.13059181e-07 1.11884306e-08]\n",
-            " [3.50562623e-05 2.14502461e-06 9.99792159e-01 4.94516037e-08\n",
-            "  6.56631664e-06 1.39175260e-09 1.03909179e-06 2.26991187e-06\n",
-            "  5.40224443e-09 1.60743948e-04]\n",
-            " [3.01172236e-07 9.99963164e-01 2.42016540e-08 2.89883161e-07\n",
-            "  9.56730901e-07 1.10610317e-05 6.52124584e-07 2.25836848e-05\n",
-            "  7.66492747e-07 1.22650405e-07]\n",
-            " [9.99904990e-01 1.79239123e-06 5.43878650e-06 2.02031315e-05\n",
-            "  1.77493966e-05 1.15554201e-06 1.28894371e-05 2.30008154e-05\n",
-            "  4.07794050e-06 8.72200326e-06]\n",
-            " [1.62476894e-07 7.26011649e-07 6.42706022e-09 7.58948744e-08\n",
-            "  9.99996662e-01 1.50471493e-07 1.20220363e-07 9.76888792e-10\n",
-            "  1.98710648e-09 2.08745155e-06]\n",
-            " [9.93209994e-08 9.99992013e-01 1.49768425e-07 3.78145728e-07\n",
-            "  6.36422612e-07 1.10944848e-06 5.34126002e-07 4.73496812e-06\n",
-            "  2.49275161e-07 5.48399051e-08]\n",
-            " [6.04063288e-08 3.77081051e-06 6.41942847e-07 7.49618394e-08\n",
-            "  9.99986291e-01 3.41637769e-06 1.26379825e-06 1.38073830e-07\n",
-            "  3.90003333e-06 3.46520238e-07]\n",
-            " [2.02871888e-08 2.40056988e-06 4.28037820e-05 1.43558125e-08\n",
-            "  2.55012619e-05 1.53166404e-08 4.61365585e-10 1.49540347e-09\n",
-            "  1.47175200e-07 9.99929070e-01]\n",
-            " [2.40648445e-02 5.20635003e-05 2.72185280e-05 7.76661750e-07\n",
-            "  3.36101581e-03 7.67770946e-01 2.03192040e-01 7.75711029e-04\n",
-            "  6.64957741e-04 9.05340421e-05]]\n",
+            "[[1.3254791e-08 1.1947427e-07 1.9453252e-09 1.1784537e-08 5.3196992e-08\n",
+            "  1.2264408e-08 4.5157172e-08 9.9999976e-01 1.8074767e-08 3.4199328e-09]\n",
+            " [6.8420754e-08 4.7414623e-09 9.9999952e-01 2.0249628e-10 1.7942223e-07\n",
+            "  9.5052696e-14 1.1901135e-08 8.3665613e-10 2.6183883e-10 7.9019181e-08]\n",
+            " [8.5735081e-08 9.9999750e-01 7.0547794e-09 1.7646624e-07 2.0349189e-08\n",
+            "  2.9780941e-07 1.8499148e-07 3.9634841e-07 1.0466987e-06 1.2185075e-07]\n",
+            " [9.9999940e-01 1.7086453e-08 1.0972639e-09 6.6933623e-08 5.1408161e-08\n",
+            "  1.5602286e-09 4.3898262e-07 4.2858119e-08 4.6448254e-09 9.0662555e-10]\n",
+            " [6.0148352e-08 1.0463052e-07 5.2401422e-08 1.6617212e-08 9.9999976e-01\n",
+            "  1.4298018e-08 2.3226738e-09 1.6205530e-10 5.1724953e-09 1.6559058e-08]\n",
+            " [7.7178996e-08 9.9999774e-01 1.2576238e-07 4.4586164e-07 4.8289991e-07\n",
+            "  2.3200490e-08 2.3716080e-07 3.7479992e-07 2.3786728e-07 2.0694215e-07]\n",
+            " [2.3127636e-10 1.1726913e-06 5.1238590e-06 1.2936476e-08 9.9999309e-01\n",
+            "  1.5161901e-09 2.2717131e-08 5.7065502e-10 3.9970638e-07 2.1611663e-07]\n",
+            " [5.3748997e-12 3.4002320e-10 3.2186922e-06 8.2600186e-13 1.1560586e-07\n",
+            "  2.2865740e-09 5.0081705e-12 2.0393747e-11 3.8508023e-09 9.9999666e-01]\n",
+            " [1.5221036e-04 5.2030900e-06 3.8204985e-07 1.5739100e-07 2.1176558e-04\n",
+            "  8.9426041e-01 1.0529740e-01 2.2937720e-05 4.6213889e-05 3.4100249e-06]]\n",
             "[7 2 1 0 4 1 4 9 5]\n"
           ],
           "name": "stdout"
