--- a/Assignment_3_1st_DNN-VK.ipynb
+++ b/Assignment_3_1st_DNN-VK.ipynb
@@ -455,25 +455,24 @@
       "metadata": {
         "id": "4xWoKhPY9Of5",
         "colab_type": "code",
-        "outputId": "997e5506-7e8f-40f3-ac64-4534f12743b4",
+        "outputId": "1106bc60-484b-4a08-883a-d5a9f242277d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 989
+          "height": 836
         }
       },
       "source": [
         "#Model training\n",
         "\n",
-        "model.fit(X_train, Y_train, batch_size=32, nb_epoch=25, verbose=1)"
+        "model.fit(X_train, Y_train, batch_size=32, nb_epoch=22, verbose=1)"
       ],
-      "execution_count": 14,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.cast instead.\n"
+            "Epoch 1/22\n",
+            "  704/60000 [..............................] - ETA: 14s - loss: 0.0015 - acc: 1.0000"
           ],
           "name": "stdout"
         },
@@ -488,56 +487,49 @@
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/25\n",
-            "60000/60000 [==============================] - 16s 269us/step - loss: 0.3456 - acc: 0.9487\n",
-            "Epoch 2/25\n",
-            "60000/60000 [==============================] - 13s 222us/step - loss: 0.1416 - acc: 0.9744\n",
-            "Epoch 3/25\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0961 - acc: 0.9795\n",
-            "Epoch 4/25\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0725 - acc: 0.9833\n",
-            "Epoch 5/25\n",
-            "60000/60000 [==============================] - 12s 208us/step - loss: 0.0608 - acc: 0.9858\n",
-            "Epoch 6/25\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0512 - acc: 0.9881\n",
-            "Epoch 7/25\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0443 - acc: 0.9889\n",
-            "Epoch 8/25\n",
-            "60000/60000 [==============================] - 14s 227us/step - loss: 0.0393 - acc: 0.9900\n",
-            "Epoch 9/25\n",
-            "60000/60000 [==============================] - 12s 208us/step - loss: 0.0353 - acc: 0.9911\n",
-            "Epoch 10/25\n",
-            "60000/60000 [==============================] - 12s 208us/step - loss: 0.0317 - acc: 0.9923\n",
-            "Epoch 11/25\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0292 - acc: 0.9923\n",
-            "Epoch 12/25\n",
-            "60000/60000 [==============================] - 12s 208us/step - loss: 0.0265 - acc: 0.9933\n",
-            "Epoch 13/25\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0248 - acc: 0.9939\n",
-            "Epoch 14/25\n",
-            "60000/60000 [==============================] - 13s 224us/step - loss: 0.0225 - acc: 0.9941\n",
-            "Epoch 15/25\n",
-            "60000/60000 [==============================] - 13s 210us/step - loss: 0.0220 - acc: 0.9942\n",
-            "Epoch 16/25\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0214 - acc: 0.9942\n",
-            "Epoch 17/25\n",
-            "60000/60000 [==============================] - 14s 231us/step - loss: 0.0186 - acc: 0.9954\n",
-            "Epoch 18/25\n",
-            "60000/60000 [==============================] - 13s 210us/step - loss: 0.0167 - acc: 0.9956\n",
-            "Epoch 19/25\n",
-            "60000/60000 [==============================] - 13s 219us/step - loss: 0.0175 - acc: 0.9955\n",
-            "Epoch 20/25\n",
-            "60000/60000 [==============================] - 13s 219us/step - loss: 0.0156 - acc: 0.9962\n",
-            "Epoch 21/25\n",
-            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0157 - acc: 0.9959\n",
-            "Epoch 22/25\n",
-            "60000/60000 [==============================] - 12s 208us/step - loss: 0.0150 - acc: 0.9960\n",
-            "Epoch 23/25\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0136 - acc: 0.9963\n",
-            "Epoch 24/25\n",
-            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0136 - acc: 0.9967\n",
-            "Epoch 25/25\n",
-            "60000/60000 [==============================] - 13s 209us/step - loss: 0.0129 - acc: 0.9969\n"
+            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0031 - acc: 0.9993\n",
+            "Epoch 2/22\n",
+            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0040 - acc: 0.9990\n",
+            "Epoch 3/22\n",
+            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0034 - acc: 0.9992\n",
+            "Epoch 4/22\n",
+            "60000/60000 [==============================] - 14s 232us/step - loss: 0.0039 - acc: 0.9990\n",
+            "Epoch 5/22\n",
+            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0033 - acc: 0.9992\n",
+            "Epoch 6/22\n",
+            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0032 - acc: 0.9991\n",
+            "Epoch 7/22\n",
+            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0034 - acc: 0.9991\n",
+            "Epoch 8/22\n",
+            "60000/60000 [==============================] - 13s 218us/step - loss: 0.0031 - acc: 0.9992\n",
+            "Epoch 9/22\n",
+            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0038 - acc: 0.9989\n",
+            "Epoch 10/22\n",
+            "60000/60000 [==============================] - 14s 234us/step - loss: 0.0027 - acc: 0.9994\n",
+            "Epoch 11/22\n",
+            "60000/60000 [==============================] - 13s 222us/step - loss: 0.0034 - acc: 0.9991\n",
+            "Epoch 12/22\n",
+            "60000/60000 [==============================] - 14s 227us/step - loss: 0.0033 - acc: 0.9992\n",
+            "Epoch 13/22\n",
+            "60000/60000 [==============================] - 14s 227us/step - loss: 0.0031 - acc: 0.9993\n",
+            "Epoch 14/22\n",
+            "60000/60000 [==============================] - 13s 224us/step - loss: 0.0031 - acc: 0.9992\n",
+            "Epoch 15/22\n",
+            "60000/60000 [==============================] - 13s 225us/step - loss: 0.0031 - acc: 0.9992\n",
+            "Epoch 16/22\n",
+            "60000/60000 [==============================] - 14s 237us/step - loss: 0.0040 - acc: 0.9989\n",
+            "Epoch 17/22\n",
+            "60000/60000 [==============================] - 13s 223us/step - loss: 0.0027 - acc: 0.9993\n",
+            "Epoch 18/22\n",
+            "60000/60000 [==============================] - 14s 241us/step - loss: 0.0028 - acc: 0.9993\n",
+            "Epoch 19/22\n",
+            "60000/60000 [==============================] - 14s 236us/step - loss: 0.0032 - acc: 0.9992\n",
+            "Epoch 20/22\n",
+            "60000/60000 [==============================] - 14s 229us/step - loss: 0.0027 - acc: 0.9994\n",
+            "Epoch 21/22\n",
+            "60000/60000 [==============================] - 14s 226us/step - loss: 0.0027 - acc: 0.9993\n",
+            "Epoch 22/22\n",
+            "60000/60000 [==============================] - 14s 235us/step - loss: 0.0028 - acc: 0.9993\n"
           ],
           "name": "stdout"
         },
@@ -545,13 +537,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f44586ba550>"
+              "<keras.callbacks.History at 0x7f4440c59b38>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 27
         }
       ]
     },
@@ -575,7 +567,7 @@
       "metadata": {
         "id": "mkX8JMv79q9r",
         "colab_type": "code",
-        "outputId": "f307f2c4-caec-44ea-eb88-801083320ad6",
+        "outputId": "c14c780b-761e-4f3a-831c-f316304a22ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -584,12 +576,12 @@
       "source": [
         "print(score)"
       ],
-      "execution_count": 16,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.024976488560059806, 0.9929]\n"
+            "[0.027996132973971816, 0.993]\n"
           ],
           "name": "stdout"
         }
@@ -613,7 +605,7 @@
       "metadata": {
         "id": "Ym7iCFBm9uBs",
         "colab_type": "code",
-        "outputId": "52ff311d-9d44-471a-e743-577a24d2aa89",
+        "outputId": "9e091061-2586-44de-a3d5-3fdb0bb2b59b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
@@ -623,38 +615,38 @@
         "print(y_pred[:9])\n",
         "print(y_test[:9])"
       ],
-      "execution_count": 18,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[5.58440050e-08 3.11567959e-07 1.73458162e-07 1.24083471e-07\n",
-            "  2.18470220e-08 7.36346948e-08 2.44919249e-08 9.99999046e-01\n",
-            "  9.12338027e-09 1.03235486e-07]\n",
-            " [1.85838289e-05 3.42593751e-07 9.99976397e-01 6.05146340e-07\n",
-            "  7.90533718e-08 9.79094361e-10 3.69790337e-06 6.00991328e-08\n",
-            "  2.95790468e-08 1.49638154e-07]\n",
-            " [2.45371143e-06 9.99920726e-01 4.84521252e-06 2.25329109e-06\n",
-            "  1.57939521e-05 1.26984351e-05 6.49133199e-06 1.78191112e-05\n",
-            "  1.53790206e-05 1.39078850e-06]\n",
-            " [9.97515082e-01 4.19231765e-05 9.66232346e-06 8.16624321e-04\n",
-            "  2.42899678e-05 1.58357250e-06 1.53738772e-03 1.66853515e-05\n",
-            "  2.68374333e-05 9.81678568e-06]\n",
-            " [1.83917825e-06 3.70912108e-04 1.62324557e-06 1.31848297e-04\n",
-            "  9.99392033e-01 8.38863969e-07 1.73348926e-05 9.90197441e-06\n",
-            "  3.25727547e-06 7.03210389e-05]\n",
-            " [3.22722826e-06 9.99985337e-01 3.62523951e-06 3.20263126e-07\n",
-            "  1.92395532e-06 3.69147244e-07 2.20621700e-06 2.04557637e-06\n",
-            "  6.96708071e-07 2.93686810e-07]\n",
-            " [5.02526447e-08 5.81435188e-06 7.54557186e-06 1.38391423e-08\n",
-            "  9.99461591e-01 6.32578747e-07 1.50933886e-06 1.61335247e-08\n",
-            "  5.21442271e-04 1.32187449e-06]\n",
-            " [2.89914670e-09 1.50299581e-06 3.55381053e-05 6.39022968e-09\n",
-            "  9.39158326e-06 9.01319936e-07 2.08476365e-08 2.10557038e-09\n",
-            "  2.32112658e-08 9.99952674e-01]\n",
-            " [1.79044364e-05 2.31995023e-06 2.31798331e-05 1.04382880e-05\n",
-            "  8.15221028e-06 1.98023304e-01 8.01333845e-01 1.48980125e-05\n",
-            "  5.53195830e-04 1.27457770e-05]]\n",
+            "[[6.17161859e-08 1.08259872e-08 6.37698505e-11 2.90906993e-10\n",
+            "  1.51162916e-09 1.18099752e-10 3.99720124e-09 9.99999881e-01\n",
+            "  2.99952944e-11 4.98085129e-10]\n",
+            " [4.85700085e-08 2.03787098e-09 1.00000000e+00 1.20956301e-09\n",
+            "  1.89028914e-12 7.23851656e-14 5.82678661e-09 8.23191723e-11\n",
+            "  1.38464700e-11 4.94209777e-11]\n",
+            " [5.43793055e-09 9.99999881e-01 7.54680940e-09 5.28531041e-09\n",
+            "  1.53368145e-08 2.11126121e-08 7.13443082e-09 4.40320136e-08\n",
+            "  2.89936235e-08 2.52664023e-09]\n",
+            " [9.99994755e-01 1.79455256e-07 4.64479939e-07 5.45189721e-07\n",
+            "  1.55147475e-07 3.31311578e-09 2.16939770e-06 9.89184400e-07\n",
+            "  6.59265766e-07 6.70390765e-09]\n",
+            " [4.05881373e-09 1.50332971e-06 2.85304141e-10 1.03590799e-06\n",
+            "  9.99997377e-01 7.10764247e-09 9.02330797e-08 5.24306643e-09\n",
+            "  7.44260653e-10 1.32145661e-09]\n",
+            " [2.45046579e-08 1.00000000e+00 1.98453840e-08 9.69092029e-10\n",
+            "  2.69015921e-09 6.78955170e-10 2.37050513e-09 7.56069962e-09\n",
+            "  1.17919150e-08 6.11279916e-11]\n",
+            " [1.78385445e-10 6.05243713e-08 6.07307584e-07 2.98258575e-12\n",
+            "  9.99340713e-01 5.34172306e-09 1.26961828e-08 2.53968309e-12\n",
+            "  6.58532779e-04 6.47468468e-10]\n",
+            " [7.77859548e-12 1.89014027e-09 4.50212063e-08 5.80219791e-13\n",
+            "  3.19596047e-08 2.94068464e-10 3.58313769e-12 2.13303724e-12\n",
+            "  4.14195483e-10 9.99999881e-01]\n",
+            " [1.01582173e-05 3.24365544e-07 1.22426812e-07 1.17777375e-07\n",
+            "  2.44284557e-08 9.92727280e-01 7.24894833e-03 2.59929189e-10\n",
+            "  1.30697572e-05 2.20110774e-09]]\n",
             "[7 2 1 0 4 1 4 9 5]\n"
           ],
           "name": "stdout"
