--- a/Assignment_5.ipynb
+++ b/Assignment_5.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c50fd669-87dd-4040-bcac-e11c7f4fd986"
+        "outputId": "03c0a8ff-73a8-4e6e-acc9-4e48abd66d37"
       },
       "source": [
         "#Importing the Libraries\n",
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6a34f958-0a89-4bb0-aad3-3b06f53c6ec1"
+        "outputId": "4da6bd48-dcd1-4578-afcc-30df25bddb79"
       },
       "source": [
         "# Drive\n",
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "9aac974f-ec37-4681-db78-68165f960934"
+        "outputId": "692da53d-5110-4320-9650-d08d8abd772b"
       },
       "source": [
         "!git clone \"https://github.com/bckenstler/CLR.git\"\n",
@@ -129,18 +129,18 @@
           "output_type": "stream",
           "text": [
             "fatal: destination path 'CLR' already exists and is not an empty directory.\n",
-            "--2019-08-09 13:20:33--  http://cs231n.stanford.edu/tiny-imagenet-200.zip\n",
+            "--2019-08-09 13:56:50--  http://cs231n.stanford.edu/tiny-imagenet-200.zip\n",
             "Resolving cs231n.stanford.edu (cs231n.stanford.edu)... 171.64.68.10\n",
             "Connecting to cs231n.stanford.edu (cs231n.stanford.edu)|171.64.68.10|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 248100043 (237M) [application/zip]\n",
-            "Saving to: ‘tiny-imagenet-200.zip.1’\n",
+            "Saving to: ‘tiny-imagenet-200.zip.3’\n",
             "\n",
-            "tiny-imagenet-200.z 100%[===================>] 236.61M  26.5MB/s    in 11s     \n",
+            "tiny-imagenet-200.z 100%[===================>] 236.61M  26.8MB/s    in 11s     \n",
             "\n",
-            "2019-08-09 13:20:45 (20.9 MB/s) - ‘tiny-imagenet-200.zip.1’ saved [248100043/248100043]\n",
+            "2019-08-09 13:57:02 (21.6 MB/s) - ‘tiny-imagenet-200.zip.3’ saved [248100043/248100043]\n",
             "\n",
-            "replace tiny-imagenet-200/words.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: A\n"
+            "replace tiny-imagenet-200/words.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: N\n"
           ],
           "name": "stdout"
         }
@@ -193,7 +193,6 @@
         "\n",
         "augSeq = iaa.Sequential([\n",
         "            iaa.Fliplr(0.25),\n",
-        "#             iaa.Flipud(0.25),   # Didn't help\n",
         "            iaa.Sometimes(0.25, iaa.Affine(rotate=(-25, 25))),\n",
         "            iaa.Sometimes(0.2, iaa.Affine(translate_percent={'x': (-0.1, 0.1), 'y': (-0.1, 0.1)})),\n",
         "            iaa.Sometimes(0.2, iaa.Crop(percent=(0, 0.125))),\n",
@@ -205,10 +204,7 @@
         "            ]))\n",
         "            ,iaa.Sometimes(0.3,iaa.GammaContrast((0.8, 1.3)))\n",
         "            ,iaa.Sometimes(0.2,iaa.GaussianBlur(sigma=(0.4, 1.3)))\n",
-        "#             ,iaa.Sometimes(0.2,iaa.Grayscale(alpha=0.1))  # return 1 channel. ToDo: Try ChangeColorspace instead\n",
-        "    \n",
         "          ])\n",
-        "\n",
         "\n",
         "def additional_augmenation(image):\n",
         "    image = augSeq.augment_image(image)\n",
@@ -230,7 +226,6 @@
         "    zoom_range = 0.3,\n",
         "    width_shift_range=0.2,\n",
         "    height_shift_range=0.2,\n",
-        "#     rotation_range=40,\n",
         "   horizontal_flip=True,\n",
         "    preprocessing_function=additional_augmenation\n",
         "    )\n",
@@ -249,7 +244,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7854ca54-a1f7-4673-98da-c5fa739bdb4f"
+        "outputId": "b514326b-24ea-4475-a1ae-4c04621f8acd"
       },
       "source": [
         "train_generator = train_datagen.flow_from_directory( r'./tiny-imagenet-200/train/', target_size=target_size, color_mode='rgb', \n",
@@ -275,7 +270,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6584e42a-3338-4c27-9279-e2c54e365deb"
+        "outputId": "f1df76ee-0b64-456f-e9d2-a40db7a05dba"
       },
       "source": [
         "validation_generator = valid_datagen.flow_from_dataframe(val_data, directory='./tiny-imagenet-200/val/images/', x_col='File', y_col='Class', target_size=(target_size),\n",
@@ -361,7 +356,6 @@
         "    BatchNorm = BatchNormalization()(conv2D)\n",
         "    relu = Activation('relu')(BatchNorm)\n",
         "    GAP = GlobalAveragePooling2D()(relu)\n",
-        "#     flat = Flatten()(AvgPooling)\n",
         "    output = Activation('softmax')(GAP)\n",
         "    \n",
         "    \n",
@@ -392,7 +386,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 292
         },
-        "outputId": "b308bdd3-fc74-4dd4-e825-9044f4870327"
+        "outputId": "a40e67c0-3a40-4005-cb9b-9ca9c9376053"
       },
       "source": [
         "input = Input(shape=(None, None, channel,))\n",
@@ -411,7 +405,6 @@
         "Fourth_Transition = add_transition(Fourth_Block, num_filter=512, dropout_rate=dropout_rate)\n",
         "\n",
         "Fifth_Block = add_denseblock(Fourth_Transition, num_filter, dropout_rate)\n",
-        "# Fifth_Transition = add_transition(Fifth_Block, num_filter=384, dropout_rate=dropout_rate)\n",
         "\n",
         "output = output_layer(Fifth_Block)"
       ],
@@ -421,19 +414,19 @@
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0809 13:21:50.158729 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "W0809 13:57:22.345484 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
             "\n",
-            "W0809 13:21:50.178267 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "W0809 13:57:22.363936 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
             "\n",
-            "W0809 13:21:50.182013 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "W0809 13:57:22.368522 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
             "\n",
-            "W0809 13:21:50.204945 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+            "W0809 13:57:22.390879 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
             "\n",
-            "W0809 13:21:50.205790 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+            "W0809 13:57:22.391694 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
             "\n",
-            "W0809 13:21:50.997858 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1834: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+            "W0809 13:57:23.118087 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1834: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
             "\n",
-            "W0809 13:21:51.335301 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "W0809 13:57:23.452558 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
             "\n"
           ],
           "name": "stderr"
@@ -449,7 +442,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "51f4d0b4-1690-42bc-ac21-0c6d1e4d6ce5"
+        "outputId": "e4a06c26-86c6-4b8e-c858-ffbfee6d27f5"
       },
       "source": [
         "model = Model(inputs=[input], outputs=[output])\n",
@@ -666,7 +659,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "1edb86fe-4023-43e3-c7c3-4ee2f11ecdec"
+        "outputId": "f739f1c0-cc47-4aaf-900a-a120e7206fe8"
       },
       "source": [
         "# Loss function and Optimizer\n",
@@ -679,7 +672,7 @@
         {
           "output_type": "stream",
           "text": [
-            "W0809 13:21:53.087590 140562061629312 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "W0809 13:57:25.241118 140456482953088 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
             "\n"
           ],
           "name": "stderr"
@@ -695,22 +688,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "85b4810b-2d63-4b14-bca6-c22423ecb284"
+        "outputId": "470decef-e8d4-47b8-d59a-7acb5125f497"
       },
       "source": [
         "import pandas as pd\n",
         "\n",
         "val_iterator = valid_datagen.flow_from_dataframe(val_data, directory='./tiny-imagenet-200/val/images/', x_col='File', y_col='Class', target_size=(64,64),\n",
         "                                                    color_mode='rgb', class_mode='categorical', batch_size=10000, shuffle=False, seed=42)\n",
-        "# val_iterator = datagen.flow(X_test, Y_test, batch_size=10000, shuffle=False)\n",
         "x_val, y_val = next(val_iterator)\n",
         "Y_val = np.argmax(y_val, axis=1) # Convert one-hot to index\n",
         "y_pred = model.predict(x_val)\n",
         "Y_pred = y_pred.argmax(axis=1)\n",
-        "d = {'pred': Y_pred, 'true': Y_val} #axis=1!important!\n",
+        "d = {'pred': Y_pred, 'true': Y_val}\n",
         "df=pd.DataFrame(data=d)"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +722,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "19751959-a1ee-490e-a55c-1da67aeaac21"
+        "outputId": "65f5faf4-79eb-4685-f726-a2379b0f0163"
       },
       "source": [
         "import copy\n",
@@ -739,7 +731,7 @@
         "                                                    color_mode='rgb', class_mode='categorical', batch_size=10000, shuffle=False, seed=42)\n",
         "x_val, y_val = next(val_iterator)"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +801,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 775
         },
-        "outputId": "8fae461a-d315-4dac-9559-795f9d97c082"
+        "outputId": "eacf0c1a-714a-4082-f798-36f9f80e9850"
       },
       "source": [
         "fig = plt.figure(figsize=(14,14))\n",
@@ -826,7 +818,7 @@
         "  plt.imshow(superimposed)\n",
         "plt.axis('off')"
       ],
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +830,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 22
         },
         {
           "output_type": "display_data",
@@ -863,7 +855,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "eeeadaaf-b979-4a05-df8a-c86e4f77a580"
+        "outputId": "528bbd3a-f47e-4d30-f21c-3a0d32fd0a91"
       },
       "source": [
         "fig = plt.figure(figsize=(64,64))\n",
@@ -882,7 +874,7 @@
         "  plt.subplots_adjust(wspace=-0.9)\n",
         "plt.axis('off')"
       ],
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -894,7 +886,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 23
         },
         {
           "output_type": "display_data",
